--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "shared_bu"]
 	path = shared_bu
 	url = https://github.com/thomas-heisel/shared_bu
+	branch = main
 [submodule "shared_it"]
 	path = shared_it
 	url = https://github.com/thomas-heisel/shared_it
+	branch = main
